[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testhaven"
version = "0.1.0"
description = "CLI-first test harness for AI agents"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["testing", "harness", "agents", "automation"]
authors = [
    { name = "TestHaven Team", email = "hi@testhaven.io" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing"
]

dependencies = [
    "click>=8.0",
    "colorama>=0.4.4; platform_system == 'Windows'"
]
[tool.setuptools]

py-modules = ["testhaven"]

[project.optional-dependencies]
yaml = [
    "PyYAML>=6.0"
]

[project.scripts]
testhaven = "testhaven:main"
